--- a/libs/client/static/css/client.sass
+++ b/libs/client/static/css/client.sass
@@ -112,6 +112,50 @@ body
         // background-size: cover
         background-size: 100% 95%
 
+    // Chart style.
+    .chart_style
+        width: 100%
+        height: 500px
+
+    .hidden_chart_style
+        width: 100%
+        height: 500px
+        display: none
+
+    // Expand button style.
+    .expand_button
+        content: url("../pics/expand.png")
+        max-width: 2%
+        float: left
+        &:hover
+            cursor: pointer
+
+    // Collapse button style.
+    .collapse_button
+        content: url("../pics/collapse.png")
+        max-width: 2%
+        float: left
+        &:hover
+            cursor: pointer
+
+    // Move up button style
+    .move_up_button
+        content: url("../pics/arrow_up.png")
+        max-width:2%
+        float: left
+        padding-left: 10px
+        &:hover
+            cursor: pointer
+
+    // Move down button style
+    .move_down_button
+        content: url("../pics/arrow_down.png")
+        max-width: 2%
+        float: left
+        padding-left: 10px
+        &:hover
+            cursor: pointer
+
     // # D3 stuff.
 
     // ## D3 graph stuff.
