--- a/libs/client/static/css/client.sass
+++ b/libs/client/static/css/client.sass
@@ -130,6 +130,14 @@ body
         &:hover
             cursor: pointer
 
+    // Close button style.
+    .close_button
+        content: url("../pics/close.png")
+        max-width:2%
+        float: right
+        &:hover
+            cursor: pointer
+
     // Collapse button style.
     .collapse_button
         content: url("../pics/collapse.png")
