--- a/libs/client/static/css/client.sass
+++ b/libs/client/static/css/client.sass
@@ -125,7 +125,7 @@ body
     // Expand button style.
     .expand_button
         content: url("../pics/expand.png")
-        max-width: 2%
+        max-width: 20px
         float: left
         &:hover
             cursor: pointer
@@ -133,7 +133,7 @@ body
     // Close button style.
     .close_button
         content: url("../pics/close.png")
-        max-width:2%
+        max-width:20px
         float: right
         &:hover
             cursor: pointer
@@ -141,7 +141,7 @@ body
     // Collapse button style.
     .collapse_button
         content: url("../pics/collapse.png")
-        max-width: 2%
+        max-width: 20px
         float: left
         &:hover
             cursor: pointer
@@ -149,7 +149,7 @@ body
     // Move up button style
     .move_up_button
         content: url("../pics/arrow_up.png")
-        max-width:2%
+        max-width:20px
         float: left
         padding-left: 10px
         &:hover
@@ -158,10 +158,18 @@ body
     // Move down button style
     .move_down_button
         content: url("../pics/arrow_down.png")
-        max-width: 2%
+        max-width: 20px
         float: left
         padding-left: 10px
         &:hover
+            cursor: pointer
+
+    // Control menu title.
+    .control_title
+        max-width: 20%
+        text-align: center
+        &:hover
+            text-decoration: underline
             cursor: pointer
 
     // # D3 stuff.
