--- a/libs/client/static/css/client.css
+++ b/libs/client/static/css/client.css
@@ -24,7 +24,7 @@ body .header_style {
   top: 0;
   background-color: #000000;
   color: #00d8ff;
-  box-shadow: 0 5px 6px 0 #000000;
+  box-shadow: 0 5px 20px 8px #000000;
 }
 body .header_style .tab_list {
   list-style-type: none;
@@ -37,9 +37,6 @@ body .header_style .li_left {
 }
 body .header_style .li_right {
   float: right;
-}
-body .header_style .li_center {
-  float: center;
 }
 body .header_style .li_a_active, body .header_style .li_a_inactive {
   display: block;
@@ -68,20 +65,57 @@ body .header_style .li_a_active {
 body .header_style .li_a_active:visited {
   color: white;
 }
-body .header_style .control_title {
-  max-width: 20%;
-  text-align: center;
+body .footer_style {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  z-index: 600;
+  background-color: #000000;
+  color: #00d8ff;
+  box-shadow: 0 -5px 20px 8px #000000;
 }
-body .header_style .control_title:hover {
+body .footer_style .tab_list {
+  list-style-type: none;
+  margin: 2px 200px;
+  padding: 0;
+  overflow: hidden;
+}
+body .footer_style .li_a_active, body .footer_style .li_a_inactive {
+  float: left;
+  display: block;
+  border-radius: 5px;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  background-image: linear-gradient(#3a3a3a, #000000);
+}
+body .footer_style .li_a_active:hover, body .footer_style .li_a_inactive:hover, body .footer_style .li_a_active:active, body .footer_style .li_a_inactive:active {
+  background-image: linear-gradient(#00d8ff, #000000);
+  color: white;
   text-decoration: underline;
   cursor: pointer;
+}
+body .footer_style .li_a_active:hover:visited, body .footer_style .li_a_inactive:hover:visited, body .footer_style .li_a_active:active:visited, body .footer_style .li_a_inactive:active:visited {
+  color: white;
+}
+body .footer_style .li_a_active:visited, body .footer_style .li_a_inactive:visited {
+  color: #00d8ff;
+}
+body .footer_style .li_a_active {
+  background-image: linear-gradient(#00d8ff, #000000);
+  color: white;
+}
+body .footer_style .li_a_active:visited {
+  color: white;
 }
 body .control_row {
   background-color: #000000;
   color: #00d8ff;
   position: fixed;
   display: flex;
-  box-shadow: 0 5px 6px 0 #000000;
+  box-shadow: 0 5px 20px 0 #000000;
   width: 100%;
 }
 body .control_row .control_col {
