done revamping css

--- a/libs/client/static/css/_fonts.sass
+++ b/libs/client/static/css/_fonts.sass
@@ -2,3 +2,5 @@
 
 $font_stack: SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif
 $font_code_stack: Monaco, Consola, sans-serif
+
+$font_size: 16px
