--- a/libs/client/static/css/footer.sass
+++ b/libs/client/static/css/footer.sass
@@ -12,7 +12,7 @@ footer
     bottom: 0
     box-shadow: $layout_shadow_hoff -$layout_shadow_voff $layout_shadow_blur $layout_shadow_spread $menu_bg
 
-    #footer_title
+    #footer_tabs
         box-shadow: inset 0px -20px 10px -10px #000000
 
     .footer_display
@@ -74,5 +74,3 @@ footer
                 border-bottom-color: $white
                 border-bottom-style: solid
 
-                code
-                    margin: 0 5px
