--- a/libs/client/static/css/style.css
+++ b/libs/client/static/css/style.css
@@ -5,7 +5,12 @@ body {
 }
 body code {
   color: #d77500;
-  background-color: #3a3a3a;
+  background-color: #a0a0a0;
+  border-radius: 4px;
+  margin: 0 5px;
+}
+body code.filter_label {
+  color: #1bad14;
 }
 body .h1 {
   color: #00d8ff;
@@ -50,6 +55,9 @@ body .memthol_chart_container .close_button {
 body .memthol_chart_container .close_button:hover {
   cursor: pointer;
 }
+body .memthol_chart_container .chart_header {
+  margin: 0 20%;
+}
 body .memthol_chart_container .chart_style {
   width: 100%;
   height: 500px;
@@ -71,13 +79,17 @@ header {
   top: 0;
   box-shadow: 0 5px 20px 8px black;
 }
-header .h1 {
-  color: #8dedff;
-}
 header code {
   color: #ff8b00;
   background-color: #3a3a3a;
   border-radius: 4px;
+  margin: 0 5px;
+}
+header code.filter_label {
+  color: #23ec19;
+}
+header .h1 {
+  color: #8dedff;
 }
 header .tab_list {
   list-style-type: none;
@@ -171,13 +183,17 @@ footer {
   bottom: 0;
   box-shadow: -5px 20px 8px black;
 }
-footer .h1 {
-  color: #8dedff;
-}
 footer code {
   color: #ff8b00;
   background-color: #3a3a3a;
   border-radius: 4px;
+  margin: 0 5px;
+}
+footer code.filter_label {
+  color: #23ec19;
+}
+footer .h1 {
+  color: #8dedff;
 }
 footer .tab_list {
   list-style-type: none;
@@ -258,7 +274,7 @@ footer .tab_list .li_right .tab_inactive:hover, footer .tab_list .li_right .tab_
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
-footer #footer_title {
+footer #footer_tabs {
   box-shadow: inset 0px -20px 10px -10px #000000;
 }
 footer .footer_display {
@@ -364,9 +380,6 @@ footer .footer_display .filter_ul .filter_val {
   border-bottom-width: 1px;
   border-bottom-color: white;
   border-bottom-style: solid;
-}
-footer .footer_display .filter_ul .filter_val code {
-  margin: 0 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
