--- a/libs/client/static/css/header.css
+++ b/libs/client/static/css/header.css
@@ -9,13 +9,17 @@ header {
   top: 0;
   box-shadow: 0 5px 20px 8px black;
 }
-header .h1 {
-  color: #8dedff;
-}
 header code {
   color: #ff8b00;
   background-color: #3a3a3a;
   border-radius: 4px;
+  margin: 0 5px;
+}
+header code.filter_label {
+  color: #23ec19;
+}
+header .h1 {
+  color: #8dedff;
 }
 header .tab_list {
   list-style-type: none;
