improved css significantly

--- a/libs/client/static/css/_layout.sass
+++ b/libs/client/static/css/_layout.sass
@@ -26,3 +26,9 @@ $layout_shadow_spread: 8px
 /// # Chart-related stuff
 $layout_chart_width: 100%
 $layout_chart_height: 500px
+
+/// # Footer-related stuff
+$layout_footer_display_height: 200px
+
+/// # Tab-relateb stuff
+$layout_tab_height: 45px
