--- a/libs/client/static/css/footer.css
+++ b/libs/client/static/css/footer.css
@@ -6,9 +6,8 @@ footer {
   position: fixed;
   z-index: 600;
   left: 0;
-  background-color: white;
   bottom: 0;
-  box-shadow: -5px 20px 8px black;
+  box-shadow: 0px 0px 10px 10px black;
 }
 footer code {
   color: #ff8b00;
@@ -30,6 +29,7 @@ footer .tab_list {
   font-size: 16px;
   margin: 0;
   padding: 0 20%;
+  height: 45px;
 }
 footer .tab_list .li_left {
   float: left;
@@ -100,9 +100,6 @@ footer .tab_list .li_right .tab_inactive:hover, footer .tab_list .li_right .tab_
 footer .tab_list .li_right .tab_inactive:hover, footer .tab_list .li_right .tab_inactive:active {
   color: white;
   background-image: linear-gradient(#8dedff, black);
-}
-footer #footer_tabs {
-  box-shadow: inset 0px -20px 10px -10px #000000;
 }
 footer .footer_display {
   background-color: black;
