--- a/libs/client/static/css/footer.sass
+++ b/libs/client/static/css/footer.sass
@@ -8,17 +8,15 @@
 footer
     @include menu_style
 
-    background-color: $body_bg
     bottom: 0
-    box-shadow: $layout_shadow_hoff -$layout_shadow_voff $layout_shadow_blur $layout_shadow_spread $menu_bg
+    box-shadow: 0px 0px 10px 10px $menu_bg
 
-    #footer_tabs
-        box-shadow: inset 0px -20px 10px -10px #000000
+    // #footer_tabs
 
     .footer_display
         background-color: $menu_bg
         width: 100%
-        height: 200px
+        height: $layout_footer_display_height
 
         .filter_ul
             @include hblock_container
