--- a/libs/client/static/css/header.css
+++ b/libs/client/static/css/header.css
@@ -29,6 +29,7 @@ header .tab_list {
   font-size: 16px;
   margin: 0;
   padding: 0 20%;
+  height: 45px;
 }
 header .tab_list .li_left {
   float: left;
